<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="system_category">System</string>
    <string name="quicksettings_category">QuickSettings</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="stockroom_category">Stockroom</string>
    <string name="candyshop_summary_title">Have some Candy, on us!</string>
    <string name="button_category_title">Buttons</string>
    <string name="media_options_category_title">Media options</string>
    <string name="sleep_controls_category_title">Sleep controls</string>
    <string name="lockscreen_security_category_title">Security options</string>
    <string name="lockscreen_icons_category_title">Lockscreen bottom shortcuts</string>
    <string name="lockscreen_clock_category_title">Clock and date options</string>
    <string name="lockscreen_other_category_title">Other</string>
    <string name="statusbar_options_category_title">Statusbar options</string>
    <string name="multitasking_category_title">Multi-tasking</string>
    <string name="screen_capture_options_category_title">Screen capture options</string>
    <string name="miscellaneous_category_title">Miscellaneous</string>
    <string name="headset_title">Headset</string>
    <string name="button_title">Volume buttons</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="torch_title">Power button</string>
    <string name="battery_title">Battery settings</string>
    <string name="leds_title">Lights</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="notification_light_settings">Notifications light</string>
    <string name="powermenu_title">Power menu</string>
    <string name="navbar_title">Navbar</string>
    <string name="notifications_title">Notifications</string>
    <string name="various_system_title">Various</string>
    <string name="various_lockscreen_title">Various</string>
    <string name="various_statusbar_title">Various</string>
    <string name="various_navigation_title">Various</string>
    <string name="recent_settings_title">Recents</string>
    <string name="status_bar_clock_title">Clock options</string>
    <string name="headset_preference_summary">Headset connect options</string>
    <string name="buttons_preference_summary">Volume key behavior options</string>
    <string name="power_button_preference_summary">Power button torch control</string>
    <string name="powermenu_preference_summary">Configure power menu options</string>
    <string name="leds_preference_summary">Battery and notification LED options</string>
    <string name="ls_shortcuts_preference_summary">Lockscreen bottom shorcut options</string>
    <string name="clock_preference_summary">Time and date display options</string>
    <string name="battery_preference_summary">Change icon and percentage display</string>
    <string name="net_traffic_preference_summary">Statusbar network traffic options</string>
    <string name="qs_preference_summary">Tiles, quick pulldown, brightness, transparency options</string>
    <string name="statusbar_preference_summary">Statusbar icon display options</string>
    <string name="recents_preference_summary">AOSP recents and SlimRecents options</string>
    <string name="ga_preference_summary">On-screen gesture launcher options</string>
    <string name="custom_carrier_label_preference_summary">Statusbar carrier text customization</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
    <string name="powermenu_advanced_reboot_summary">Enables the advanced reboot menu for rebooting options such hot, recovery and bootloader. Also adds as an option to restart SystemUI</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_airplane_title">Airplane mode</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_airplane_summary">Show the airplane mode option on the lockscreen</string>
    <string name="theme_category_title">System theme sweetness</string>
    <string name="systemui_theme_style_title">Background color</string>
    <string name="systemui_theme_style_auto">Automatic (wallpaper based)</string>
    <string name="systemui_theme_style_light">White Chocolate</string>
    <string name="systemui_theme_style_dark">Dark Chocolate</string>
    <string name="systemui_theme_style_blackaf">Black Licorice</string>
    <string name="system_dark_theme_toast_before">Sweetening theme! Please wait...</string>
    <string name="system_dark_theme_toast_after">Sweetness applied!</string>
    <string name="applying_theme_toast">Sweetening theme, please wait...</string>
    <string name="theme_applied_toast">Sweetness applied!</string>
    <string name="substratum_installed_title">Sweet Themes are unavailable because Substratum is installed. Uninstall it if you wish to use Candy Sweetener instead.</string>
    <string name="accent_picker_dialog_title">Sweetness accent color</string>
    <string name="theme_accent_picker_title">Sweetness accent color</string>
    <string name="theme_accent_picker_summary">Select system theme sweetness color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_quick_qs_pulldown">Quick Pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Pulldown statusbar from right side to show QS panel</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
    <string name="double_tap_sleep_gesture_title">Double tap status bar to sleep</string>
    <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Volume panel will show media volume slider by default</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
    <string name="headset_connect_player_disabled">Disabled</string>
    <string name="headset_connect_player_wired">When wired headset is plugged in</string>
    <string name="headset_connect_player_bt_no_carkit">When BT headset (no carkit) is plugged in</string>
    <string name="headset_connect_player_bt">When BT headset is plugged in</string>
    <string name="headset_connect_player_both_no_carkit">When wired or BT headset (no carkit) is plugged in</string>
    <string name="headset_connect_player_both">When wired or BT headset is plugged in</string>
    <string name="toast_icon_title">App\'s icon in toast</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="qs_panel_alpha_title">Transparency</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="notifications_category_title">Annoying notifications protection</string>
    <string name="less_boring_heads_up_title">Make heads up less annoying</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer or messaging app</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="qs_tile_title_visibility_summary">Show titles underneath quick settings tiles</string>
    <string name="status_bar_logo_title">Custom Candy logo</string>
    <string name="status_bar_logo_dialog_title">Set Candy logo position</string>
    <string name="brightness_icon_title">Auto-brightness icon</string>
    <string name="brightness_icon_summary">Show a auto-brightness icon to the right of the brightness slider to toggle auto-brightness</string>
    <string name="ticker_mode_title">Allow notification ticker</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="status_bar_custom_header_title">Enable</string>
    <string name="daylight_header_pack_title">Header image collection</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Click on any image to use for static mode</string>
    <string name="custom_header_title">Custom header image</string>
    <string name="file_header_select_title">Select image</string>
    <string name="file_header_select_summary">Select custom image</string>
    <string name="statusbar_notifications_title">Statusbar ticker and heads-up options</string>
    <string name="notification_sound_vib_screen_on_title">Notifications sound and vibration if screen is on</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="force_ambient_for_media_summary">Show an Ambient Display notification when a new track is being played</string>
    <string name="force_ambient_for_media_title">Select layout</string>
    <string name="qs_animation_options_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Animation interpolator</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="qqs_scroll_title">Quick scroll small tiles</string>
    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
</resources>