<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar_category"
    android:layout="@layout/tab" >

    <PreferenceCategory
        android:key="statusbar_options_category"
        android:title="@string/statusbar_options_category_title" >

        <Preference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_title"
            android:summary="@string/clock_preference_summary"
            android:fragment="org.candy.candyshop.fragments.StatusBarClockSettings" />

        <Preference
            android:key="status_bar_battery_style"
            android:title="@string/battery_title"
            android:summary="@string/battery_preference_summary"
            android:fragment="org.candy.candyshop.fragments.StatusbarBatteryStyle" />

        <Preference
            android:key="network_traffic"
            android:title="@string/network_traffic_title"
            android:summary="@string/net_traffic_preference_summary"
            android:fragment="org.candy.candyshop.fragments.NetworkTraffic" />

        <Preference
            android:key="quicksettings"
            android:title="@string/quicksettings_title"
            android:summary="@string/qs_preference_summary"
            android:fragment="org.candy.candyshop.fragments.QuickSettings" />

        <Preference
            android:title="@string/statusbar_items_title"
            android:summary="@string/statusbar_preference_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
        </Preference>

        <org.candy.candyshop.preference.SystemSettingListPreference
            android:key="status_bar_logo"
            android:title="@string/status_bar_logo_title"
            android:dialogTitle="@string/status_bar_logo_dialog_title"
            android:entries="@array/status_bar_logo_entries"
            android:entryValues="@array/status_bar_logo_values"
            android:defaultValue="0" />

        <Preference
            android:key="carrier_label"
            android:title="@string/custom_carrier_label_title"
            android:summary="@string/custom_carrier_label_preference_summary"
            android:fragment="org.candy.candyshop.fragments.CarrierLabel" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_sleep_gesture_title"
            android:defaultValue="true" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="statusbar_notifications"
        android:title="@string/statusbar_notifications_title" >

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="less_boring_heads_up"
            android:title="@string/less_boring_heads_up_title"
            android:summary="@string/less_boring_heads_up_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="ticker_mode"
            android:dependency="less_boring_heads_up"
            android:entries="@array/ticker_mode_entries"
            android:entryValues="@array/ticker_mode_values"
            android:summary="%s"
            android:title="@string/ticker_mode_title" />

    </PreferenceCategory>

</PreferenceScreen>
