<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quicksettings_category"
    android:layout="@layout/tab" >

    <org.candy.candyshop.preference.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:defaultValue="false"/>

    <Preference
        android:key="qs_rows_columns"
        android:fragment="org.candy.candyshop.fragments.QsRowsColumns"
        android:title="@string/qs_rows_columns_title"/>

    <org.candy.candyshop.preference.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summary="@string/qs_tile_title_visibility_summary"
        android:defaultValue="true" />

    <org.candy.candyshop.preference.SystemSettingSwitchPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:summary="@string/status_bar_quick_qs_pulldown_summary"
        android:defaultValue="true" />

    <org.candy.candyshop.preference.SystemSettingSwitchPreference
        android:key="qs_quickbar_scroll_enabled"
        android:icon="@drawable/ic_gesture_swipe_left"
        android:title="@string/qqs_scroll_title"
        android:summary="@string/qqs_scroll_summary"
        android:defaultValue="false"/>

    <org.candy.candyshop.preference.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

    <org.candy.candyshop.preference.CustomSeekBarPreference
        android:key="qs_panel_alpha"
        android:title="@string/qs_panel_alpha_title"
        android:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false" />

    <PreferenceCategory
        android:key="quick_settings_animations"
        android:title="@string/qs_animation_options_title"/>

        <ListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_duration"
            android:title="@string/qs_tile_animation_duration_title"
            android:entries="@array/qs_tile_animation_duration_entries"
            android:entryValues="@array/qs_tile_animation_duration_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:persistent="false" />

         <PreferenceCategory
            android:key="category_custom_header"
            android:title="@string/custom_header_title">

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <Preference
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.PickHeaderActivity" />
        </Preference>

        <Preference
            android:key="file_header_select"
            android:title="@string/file_header_select_title"
            android:summary="@string/file_header_select_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
        </Preference>

        <org.candy.candyshop.preference.SystemSettingSeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="100"
            android:min="0"
            android:persistent="false"
            android:defaultValue="0" 
            android:dependency="status_bar_custom_header" />

    </PreferenceCategory>
</PreferenceScreen>
