<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project
      Copyright (C) 2018 CandyRoms

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:key="system"
        android:layout="@layout/tab" >

    <PreferenceCategory
        android:id="@+id/system_tab_header"
        android:layout="@layout/tab_header_preference_category"
        android:title="@string/system_aisle_header" />

    <PreferenceCategory
        android:id="@+id/buttons_category"
        android:key="buttons_category"
        android:title="@string/button_category_title" />

        <Preference
            android:key="button"
            android:title="@string/button_title"
            android:summary="@string/buttons_preference_summary"
            android:fragment="org.candy.candyshop.fragments.Button" />

        <Preference
            android:key="torch"
            android:title="@string/torch_title"
            android:fragment="org.candy.candyshop.fragments.Torch" />

        <Preference
            android:key="ime"
            android:title="@string/keyboard_ime_summary"
            android:fragment="org.candy.candyshop.fragments.IME" />

    <PreferenceCategory
        android:key="notifications_category"
        android:title="@string/notifications_category_title" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference
            android:key="notification_sound_vib_screen_on"
            android:title="@string/notification_sound_vib_screen_on_title"
            android:summary="@string/notification_sound_vib_screen_on_summary"
            android:defaultValue="true" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference 
            android:key="force_expanded_notifications" 
            android:title="@string/force_expanded_notifications_title" 
            android:summary="@string/force_expanded_notifications_summary"
            android:defaultValue="false" />

        <org.candy.candyshop.preference.SystemSettingSwitchPreference 
            android:key="force_ambient_for_media"
            android:title="@string/force_ambient_for_media_title"
            android:summary="@string/force_ambient_for_media_summary"
            android:defaultValue="false" />

</PreferenceScreen>
